# finex-funding-bot

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
src/: consts.rs  errors.rs  macros.rs  main.rs
