[package]
name = "finex-funding-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfinex = { git = "https://github.com/xavier59/bitfinex-rs.git" }
dotenv = "0.15.0"
env_logger = "0.9.0"
error-chain = "0.12.4"
lazy_static = "1.4.0"
log = "0.4.17"